BUD-428 Expand health checks
